<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/swoosh_4500x2500"
    tools:context=".UI.StartPageFragment">

    <ImageView
        android:id="@+id/imageViewFlag"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:alpha=".5"
        android:src="@drawable/checkered_flag_blur"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="291dp"
        android:layout_marginTop="96dp"
        android:text="RACE"
        android:textColor="#FFFEFE"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewFlag"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="CLOCK"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView_tire_tread"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="270dp"
        android:background="#00FFFFFF"
        android:src="@drawable/tiretracks_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewFlag" />

    <TextView
        android:id="@+id/textViewTitleLightsOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_countdown"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_tire_tread" />

    <TextView
        android:id="@+id/textViewCountdownTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_race_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleLightsOut" />

    <TextView
        android:id="@+id/textViewRaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/title_race"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleLightsOut" />

    <TextView
        android:id="@+id/textViewEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/countdown_race_event"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCountdownTitle" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventName">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView_race_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdown_race_day_"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView_race_day_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/countdown_race_day_desc"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView_race_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdown_race_hour"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView_race_hour_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdown_race_hour_desc"
                android:textColor="#FFFBFB" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView_race_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdown_race_min"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView_race_min_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdown_race_min_desc"
                android:textColor="#FAF8F8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView_race_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdown_race_sec"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView_race_sec_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countdown_race_sec_desc"
                android:textColor="#FAF8F8" />
        </LinearLayout>
    </LinearLayout>

    <!--view
        android:id="@+id/viewLiveData"
        class="androidx.recyclerview.widget.RecyclerView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="28dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_tire_tread" /-->

    <ListView
        android:id="@+id/listView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="28dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_tire_tread" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:text="@string/button_settings"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/button_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:text="@string/button_privacy"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_settings" />

    <Button
        android:id="@+id/button_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:text="@string/button_user_agreement"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_settings" />

    <!-- Circular ImageView using CircleImageView library -->
    <!--<de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circularImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:src="@drawable/your_image" />-->

</androidx.constraintlayout.widget.ConstraintLayout>