<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/swoosh_4500x2500"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/widget_imageView_tire_tread"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:src="@drawable/tiretracks_dark"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/widgetTextViewCountdownTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/countdown_race_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/widget_textViewRaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/title_race"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/countdownTextViewEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/countdown_race_event"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewEventDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#F8F5F5"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_textView_race_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/countdown_race_day_"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/widget_textView_race_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/countdown_race_hour"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/widget_textView_race_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/countdown_race_min"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/widget_textView_race_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/countdown_race_sec"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widget_textView_race_day_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/countdown_race_day_desc"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widget_textView_race_hour_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/countdown_race_hour_desc"
            android:textColor="#FFFBFB"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widget_textView_race_min_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/countdown_race_min_desc"
            android:textColor="#FAF8F8"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widget_textView_race_sec_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/countdown_race_sec_desc"
            android:textColor="#FAF8F8"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/widget_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></ListView>

    <!--view
        android:id="@+id/viewLiveData"
        class="androidx.recyclerview.widget.RecyclerView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginTop="28dp"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_tire_tread" /-->

    <!-- Circular ImageView using CircleImageView library -->
    <!--<de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circularImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:src="@drawable/your_image" />-->


    <!--androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center">

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:text="Countdown"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_race_day_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_race_day_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/countdown_race_day_desc"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView_race_hour_desc"
        app:layout_constraintEnd_toEndOf="@+id/textView_race_hour_desc"
        app:layout_constraintTop_toBottomOf="@+id/countdown_text" />

    <TextView
        android:id="@+id/textView_race_hour_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/countdown_race_hour_desc"
        android:textColor="#FFFBFB"
        app:layout_constraintBottom_toTopOf="@+id/textView_race_min_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_race_day_desc" />

    <TextView
        android:id="@+id/textView_race_min_desc"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/countdown_race_min_desc"
        android:textColor="#FAF8F8"
        app:layout_constraintBottom_toTopOf="@+id/textView_race_sec_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_race_hour_desc" />

    <TextView
        android:id="@+id/textView_race_sec_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/countdown_race_sec_desc"
        android:textColor="#FAF8F8"
        app:layout_constraintBottom_toTopOf="@+id/textViewRaceName"
        app:layout_constraintStart_toStartOf="@+id/textView_race_min_desc"
        app:layout_constraintTop_toBottomOf="@+id/textView_race_min_desc" />

    <TextView
        android:id="@+id/textViewRaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="280dp"
        android:text="@string/title_race"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/countdown_text"
        app:layout_constraintTop_toBottomOf="@+id/textView_race_sec_desc" />
</androidx.constraintlayout.widget.ConstraintLayout-->
</LinearLayout>