<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MyApplication.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyApplication.AppWidgetContainer"
    android:id="@+id/widget_app_widget"
    android:background="@drawable/swoosh_4500x2500"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/widget_imageView_tire_tread"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:src="@drawable/tiretracks_dark"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/countdownTextViewCountdownTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/countdown_race_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/widget_textViewRaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/title_race"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/countdownTextViewEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/countdown_race_event"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/countdownTextViewEventDate1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" December 15 2024"
        android:textAlignment="center"
        android:textColor="#FDFBFB"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/countdownTextViewEventDate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="8:30 AM"
        android:textAlignment="center"
        android:textColor="#FDFBFB"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

</LinearLayout>